...
            
            VStack(spacing: 15) {
                DropDownPicker(title: "Выберите категорию",
                               options: viewModel.categories,
                               selection: $viewModel.selectedCategory)
                    .zIndex(2)
                    .accessibilityIdentifier("categoryPicker")
                
                DropDownPicker(title: "Выберите карту",
                               options: viewModel.allCards,
                               selection: $viewModel.selectedCard)
                    .zIndex(1)
                    .accessibilityIdentifier("cardPicker")
                
                
                TextField("Сумма", text: $viewModel.selectedSum)
                    .frame(maxWidth: .infinity)
                    .frame(height: 50)
                    .padding(.horizontal, 15)
...
                                .padding(.trailing, 18)
                                .foregroundStyle(.gray)
                                .fontWeight(.medium)
                                .opacity(viewModel.selectedSum.isEmpty ? 0 : 1)
                        }
                    }
                    .accessibilityIdentifier("sumTextField")
                
                Button {
                    viewModel.addTransaction()
                    
                    guard viewModel.showSuccessfulTransactionAlert else { return }
                    DispatchQueue.main.asyncAfter(deadline: .now() + 1.5) {
...
                        .frame(maxWidth: .infinity)
                        .background(.blue)
                        .clipShape(RoundedRectangle(cornerRadius: 5))
                        .padding(.top, 20)
                        .zIndex(0)
                }
                .accessibilityIdentifier("doneButton")
            }
            .padding(30)
            .onDisappear {
                viewModel.onDisappear()
            }
            .alert(isPresent: $viewModel.showNotEnoughtCreditsAlert, view: viewModel.notEnoughCreditsAlert)
...
