...
                    .frame(height: UIScreen.main.bounds.height / 14)
                    
                    HStack {
                        FinanceActions(action: .expense) {
                            viewModel.showExpenseView.toggle()
                        }
                        .accessibilityIdentifier("expenseView")
                        
                        Spacer()
                        
                        FinanceActions(action: .topUp) {
                            viewModel.showTopUpView.toggle()
                        }
...
