...
    @Published var balance: String = ""
    @Published var showEllipsis: Bool = false
    @Published var showValidCard: Bool = false
    @Published var showInvalidCard: Bool = false
    @Published var cardToDelete: Card? = nil
    
    var validCardAlert = AlertAppleMusic17View(title: "Карта добавлена", subtitle: nil, icon: .done)
    var invalidCardAlert = AlertAppleMusic17View(title: "Заполните все поля", subtitle: nil, icon: .error)
    
    let cardDetailsViewModel: CardDetailsViewModel
    private let cardService: CardServiceProtocol
    private let notificationCenter: NotificationCenter
    private var cancellables = Set<AnyCancellable>()
    
...
