...
                .background(Color(.systemBackground))
                .clipShape(RoundedRectangle(cornerRadius: 20))
            }
            .safeAreaInset(edge: .bottom) { Color.clear.frame(height: 150) }
        }
        .alert("Удалить карту?", isPresented: $viewModel.showEllipsis) {
            Button("Удалить", role: .destructive) {
                viewModel.deleteCard(card)
                dismiss()
            }
            
            Button("Отмена", role: .cancel) {
                dismiss()
            }
        }
        .onAppear {
            viewModel.fetchTransactions(card)
            viewModel.observeTransactions(card)
        }
        .navigationTitle("История операций")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ButtonComponents.ellipsisButton {
                viewModel.showEllipsis.toggle()
            }
        }
...
